spacing of recent score box fixed, to do list updated, clsoe window box added to post win box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,12 +126,15 @@ form {
     color: white;
 }
 
-#table-container {
-    width: 33%;
-    height: 33%;
-}
-
 #toAppendTo {
     color: white;
-    display: table;
+}
+
+table {
+    text-align: center;
+    padding: 1rem;
+}
+
+th {
+    padding: 0 1rem 1rem;
 }
